[package]
name = "Tsukiyomi-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["gateway", "client", "model", "rustls_backend"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros"] }
warp = "0.3"
dashmap = "5.4"
dotenv = "0.15.0"
tokio-cron-scheduler = "0.14.0"
reqwest = "0.12.23"

